--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^1.3.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-vue": "^2.0.0",
     "parcel-bundler": "^1.8.1",
