--- a/ui/package.json
+++ b/ui/package.json
@@ -17,7 +17,8 @@
     "d3-selection": "^1.3.0",
     "lodash": "^4.17.10",
     "vue": "^2.5.16",
-    "vue-hot-reload-api": "^2.3.0"
+    "vue-hot-reload-api": "^2.3.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^1.3.1",
