--- a/ui/package.json
+++ b/ui/package.json
@@ -6,18 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass sass/style.scss css/style.css",
-    "start": "npm run build-css && parcel",
+    "start": "npm run build-css && parcel index.html",
     "build": "npm run build-css && parcel build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "britecharts": "^2.9.0",
+    "britecharts": "^2.9.2",
     "buefy": "^0.6.6",
     "d3-selection": "^1.3.0",
     "lodash": "^4.17.10",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.0",
     "vue-router": "^3.0.1",
     "vue-stash": "^2.0.1-beta"
@@ -28,10 +28,10 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-vue": "^2.0.0",
-    "node-sass": "^4.9.0",
-    "parcel-bundler": "^1.8.1",
+    "node-sass": "^4.9.2",
+    "parcel-bundler": "^1.9.7",
     "standard": "^11.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.17"
   },
   "standard": {
     "env": {
