--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "britecharts": "^2.9.2",
     "buefy": "^0.6.6",
+    "chart.js": "^2.7.2",
     "d3-selection": "^1.3.0",
     "lodash": "^4.17.10",
     "vue": "^2.5.17",
